corrected nav align made by rolondo

--- a/style_sheets/styles.css
+++ b/style_sheets/styles.css
@@ -3,7 +3,7 @@
 /*font-family: 'Fira Sans', sans-serif;*/
 
 nav {
-  text-align: left;
+  text-align: center;
 }
 
 h1.home {
